--- a/css/styleaboutme.css
+++ b/css/styleaboutme.css
@@ -15,7 +15,13 @@ body{
     margin-left: 500px;
     margin-right: 500px;
     letter-spacing:1.5px;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
 }
+
+.fade-out {
+    opacity: 0;
+  }
 
 nav .right-nav-bar .about-me-button{
     color: #90EE90
