--- a/static/css/styleprojects.css
+++ b/static/css/styleprojects.css
@@ -68,6 +68,7 @@ h1{
     display: flex;
     position: relative;
     transition: opacity 0.5s ease-in-out;
+    z-index: -100;
 }
 
 .projects > div {
@@ -173,10 +174,29 @@ svg{
     color: #fff;
     height: 24px;
     width: 24px;
-    transition: 0.3s ease-in
+    transition: 0.3s ease-in;
+    position: relative; 
+    z-index: 2
 }
 
 svg:hover{
     color: #90EE90;
     transform:translateY(-5px)
 }
+
+a{
+    display: inline-block;
+    position: relative; 
+    z-index: 1;
+}
+
+.youtubelogo img{
+    transition: transform 0.3s ease-in;
+}
+
+.youtubelogo img:hover{
+    filter: invert(50%) sepia(100%) saturate(7313%) hue-rotate(1deg) brightness(104%) contrast(102%);
+    transform:translateY(-5px)
+}
+
+  
