--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,96 +1,117 @@
 nav {
-    color: #fff;
-    font-size: 20px;
-    display: flex;
-    justify-content: space-between;
-    padding-top: 30px;
-    padding-bottom: 10px;
+  color: #fff;
+  font-size: 20px;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 30px;
+  padding-bottom: 10px;
 }
 
-body{
-    font-family: Manrope,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji!important;
-    background-color: #333;
-    background-image: url('../assets/bgwhite.jpg');
-    background-blend-mode:color-dodge;
-    margin-left: 500px;
-    margin-right: 500px;
-    letter-spacing:1.5px;
-    opacity: 0;
-    transition: opacity 1s ease-in-out;
+body {
+  font-family: Manrope, ui-sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
+    Noto Color Emoji !important;
+  background-color: #333;
+  background-image: url("../assets/bgwhite.jpg");
+  background-blend-mode: color-dodge;
+  margin-left: 26%;
+  margin-right: 26%;
+  letter-spacing: 1.5px;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
 }
 
 .fade-out {
-    opacity: 0;
-  }
+  opacity: 0;
+}
 
-nav .left-nav-bar a{
-    color: #90EE90
+nav .left-nav-bar a {
+  color: #90ee90;
 }
 
 nav a {
-    color: #fff;
-    text-decoration: none;
-    padding: 10px;
-    transition: 1s ease;
-    cursor: pointer;
+  color: #fff;
+  text-decoration: none;
+  padding: 10px;
+  transition: 1s ease;
+  cursor: pointer;
 }
 
 a:hover {
-    color: #90EE90;
+  color: #90ee90;
 }
 
-.home img{
-    width: 375px;
-    height: 375px;
-    border-radius: 50%;
-    padding: 5px;
-    border: 3px solid #90ee90;
-    float: right;
+.home img {
+  width: 100%;
+  border-radius: 50%;
+  padding: 5px;
+  border: 3px solid #90ee90;
+  float: right;
 }
-.container{
-    display: flex;
-    padding-top: 200px;
+.container {
+  display: flex;
+  padding-top: 20%;
 }
-.left-side{
-    width: 100%;
-}
-
-.right-side{
-    width: 50%
+.left-side {
+  width: 65%;
 }
 
-h2{
-    color: #90EE90;
-    font-size: 30px;
-    margin: 0;
+.right-side {
+  width: 50%;
 }
-h1{
-    color: #fff;
-    font-size: 75px;
-    margin: 0;
+
+h2 {
+  color: #90ee90;
+  font-size: 1.5vw;
+  margin: 0;
 }
-p{
-    font-weight:300;
+h1 {
+  color: #fff;
+  font-size: 4vw;
+  margin: 0;
+}
+p {
+  font-weight: 300;
+  font-size: 1vw;
+  color: #cccccc;
+  width: 75%;
+  background-color: rgb(51, 39, 39);
+  padding: 20px;
+}
+svg {
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+  color: #fff;
+  transition: 0.3s ease-in;
+}
+
+svg:hover {
+  color: #90ee90;
+  transform: translateY(-5px);
+}
+
+a {
+  text-decoration: none;
+  padding-left: 20px;
+}
+
+@media only screen and (max-width: 768px) {
+  body {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  h2 {
+    font-size: 25px;
+  }
+  h1 {
+    font-size: 40px;
+  }
+  p {
     font-size: 20px;
-    color: #cccccc;
-    width: 75%;
-    background-color: rgb(51, 39, 39);
-    padding: 20px;
-}
-svg{
-    width: 30px;
-    height: 30px;
-    display: inline-block;
-    color: #fff;
-    transition: 0.3s ease-in
-}
-
-svg:hover{
-    color: #90EE90;
-    transform:translateY(-5px)
-}
-
-a{
-    text-decoration: none;
-    padding-left: 20px;
+  }
+  .left-side {
+    width: 100%;
+  }
 }
