--- a/static/css/styleaboutme.css
+++ b/static/css/styleaboutme.css
@@ -149,6 +149,11 @@ li {
 }
 
 @media only screen and (max-width: 1007px) {
+  nav{
+    font-size: 40px;
+    font-weight: 500;
+  }
+
   body {
     margin-left: 10%;
     margin-right: 10%;
