--- a/static/css/styleexperience.css
+++ b/static/css/styleexperience.css
@@ -5,6 +5,8 @@ nav {
   justify-content: space-between;
   padding-top: 30px;
   padding-bottom: 10px;
+  margin-left: 26%;
+  margin-right: 26%;
 }
 
 body {
@@ -15,18 +17,35 @@ body {
   background-color: #333;
   background-image: url("../assets/bgwhite.jpg");
   background-blend-mode: color-dodge;
-  margin-left: 26%;
-  margin-right: 26%;
   letter-spacing: 1.5px;
   opacity: 0;
   transition: opacity 1s ease-in-out;
+}
+
+.experience{
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
 .fade-out {
   opacity: 0;
 }
 
-nav .right-nav-bar .about-me-button {
+.left-side, .right-side {
+  flex: 1;
+}
+
+.right-side a{
+  text-decoration:none;
+}
+
+.right-side a:hover{
+  text-decoration: underline;
+  text-decoration-color: #00ced1;
+  text-decoration-thickness: 1px;
+}
+
+nav .right-nav-bar .experience-button {
   color: #90ee90;
 }
 nav a {
@@ -46,8 +65,35 @@ h1 {
   color: #90ee90;
   display: inline;
 }
+h2{
+  font-size: 2.5vw;
+  color: #00ced1;
+  margin: 0;
+  margin-bottom: 0px;
+  margin-left: 50px;
+}
+h3{
+  font-size: 1vw;
+  color: #fff;
+  margin: 0;
+  margin-bottom: 0px;
+  margin-left: 50px;
+}
+
+h4{
+  font-size: 0.8vw;
+  color: #90ee90;
+  margin: 0;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  margin-left: 75px;
+}
+
+
 
 header {
+  margin-left: 26%;
+  margin-right: 26%;
   margin-top: 65px;
   position: relative;
   margin-bottom: 50px;
@@ -78,43 +124,20 @@ img {
   position: relative;
 }
 
-.image-container::after {
-  content: "";
-  position: absolute;
-  top: -20px;
-  left: -20px;
-  width: 100%;
-  height: 100%;
-  border-radius: 5%;
-  border: 2px solid #90ee90;
-  z-index: -1;
-}
-
-.text p {
-  color: #cccccc;
-  font-size: 0.9vw;
-  margin: 0;
-}
-
 .left-side p {
   color: #cccccc;
-  font-size: 15px;
+  font-size: 0.8vw;
   margin: 0;
   margin-top: 20px;
 }
 
-.left-side {
-  width: 100%;
-}
-
-.about-me-contents {
+.experience-contents {
   display: flex;
   align-items: flex-start;
 }
 
 .text {
   width: 100%;
-  flex-grow: 1;
   background-color: rgb(24,25,26,0.3);;
   margin-left: 50px;
   padding: 20px;
@@ -123,12 +146,12 @@ img {
 .tech-list {
   display: grid;
   color: #fff;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   list-style-type: none;
   padding: 0;
 }
 
-.tech-list li::before {
+li::before {
   content: ">";
   font-size: 10px;
   vertical-align: middle;
@@ -137,21 +160,44 @@ img {
   margin-right: 0.5rem;
 }
 
-ul {
-  padding: 0;
-}
-
 li {
-  font-size: 1vw;
+  color: white;
+  font-size: 0.8vw;
   letter-spacing: 1.5px;
   margin: 5px;
   font-family: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
+  list-style-type: none;
+}
+
+.text li {
+  font-size: 1vw;
+  margin: 10px;
+  color: #cccccc;
+  font-family: Manrope, ui-sans-serif, system-ui, -apple-system,
+  BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
+  sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
+  Noto Color Emoji !important;
+}
+
+.text li::before {
+  content: ">";
+  font-size: 0.8vw;
+  vertical-align: middle;
+  position: relative;
+  top: -3px;
+  margin-right: 0.5rem;
+}
+
+ul {
+  padding: 0;
 }
 
 @media only screen and (max-width: 1007px) {
   nav{
     font-size: 30px;
     font-weight: 500;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   body {
@@ -162,41 +208,81 @@ li {
     background-size: cover;
   }
 
+  header{
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
   .container {
     padding-top: 50px;
   }
 
   li {
+    font-size: 12px;
+  }
+
+  h3 {
     font-size: 20px;
   }
 
+  h4 {
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+
   h2 {
-    font-size: 25px;
+    font-size: 60px;
   }
   h1 {
     font-size: 50px;
   }
   .text {
-    width: 85%;
+    width: auto;
     margin-left: 0px;
+    margin-right: 0px;
   }
-  .text p {
-    font-size: 12px;
+  .text li {
+    font-size: 30px;
+  }
+
+  .text li::before {
+    content: ">";
+    font-size: 20px;
+    vertical-align: middle;
+    position: relative;
+    top: -3px;
+    margin-right: 0.5rem;
   }
 
   .left-side p {
-    font-size: 20px;
+    font-size: 16px;
   }
 
-  .left-side {
-    width: 50%;
+  .experience{
+    margin-left: 0;
+    margin-right: 0;
   }
-  .about-me-contents {
+  .experience-contents {
     flex-direction: column;
     align-items: center;
   }
 
+  .tech-list{
+    grid-template-columns: repeat(3, 1fr);
+  }
+
   .tech-list li::before {
     font-size: 12px;
+  }
+
+  .left-side {
+    order: 1; /* Set left-side to display below right-side */
+} 
+  .right-side {
+      order: 0; /* Set right-side to display above left-side */
+      margin-left: 0;
+      margin-right: 0;
+      margin-bottom: 50px;
   }
 }
