--- a/static/css/styleprojects.css
+++ b/static/css/styleprojects.css
@@ -139,7 +139,7 @@ h1 {
 
 .project-description {
   font-size: 20px;
-  background-color: rgb(51, 39, 39);
+  background-color: rgb(24,25,26,0.3);
   padding: 20px;
 }
 
@@ -278,7 +278,7 @@ a {
   }
 
   nav{
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 500;
   }
 
